# demo_gt

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  agent.py  app.py  config.py  conversations.py  llm.py  mcp_servers.py  prompts.py  pyproject.toml
services/: agent_service.py
templates/: index.html
