[project]
name = "demo-gt"
version = "0.1.0"
description = "Agent géospatial orchestrant les serveurs MCP Géoportail (IGN) et QGIS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Stéphane PEILLET" }]
dependencies = [
    "flask>=3.0",
    "langgraph>=0.3",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "langchain-mcp-adapters>=0.1",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Application mono-fichiers à la racine : pas de package à empaqueter.
bypass-selection = true
